fixed scrollbar bug on chrome

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,12 +14,21 @@
   }
 }
 
-body {
+.body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
 
-scale-101 {
+.scale-101 {
   transform: scale(1.05);
+}
+
+.element {
+  overflow: scroll; /* or overflow: auto */
+  scrollbar-width: none; /* for Firefox */
+}
+
+.element::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Edge */
 }
